# subjective

./: generate.py  generate_plots.py  m.txt  research_paper.tex
Answer-Evaluation-System-main/: .gitignore  =0.26.0  Procfile  admin.py  create_naive_bayes_model.py  create_optimized_weights.py  create_sentence_transformer_model.py  download_nltk_data.py  fine_tune_sentence_transformer.py  naive_bayes_model.pkl  optimized_weights.pkl  pyproject.toml  requirements.txt  scheduler.py  schma_updates.py  sql.py  updated_nlp_functions.py  vectorizer.pkl  vercel.json
Answer-Evaluation-System-main/saved_model/: README.md
Answer-Evaluation-System-main/templates/: adminhome.html  teacher_feedback.html  teacher_view_score.html
